--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@media screen and (max-width: 767px){
+
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
@@ -54,4 +56,6 @@ section#login > div#imagem{
 section#login > div#formulario{
     display: block;
     padding: 10px;
+}
+
 }
