--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,7 +23,7 @@ body, html{
 
 main{
     position: relative;
-    width: 100vw;
+    width: 100vw;   
     height: 100vh;
 }
 
@@ -54,4 +54,13 @@ section#login > div#imagem{
 section#login > div#formulario{
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
 }
