--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,6 +63,7 @@ section#login > div#formulario{
 div#formulario > h1{
     text-align: center;
     margin-bottom: 10px;
+    color: var(--cor2);
 }
 
 div#formulario > p{
